# econ-project-mini

./: .Rprofile  .cursorrules  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .textlintrc.json  CODEX.md  Makefile  README.md  pyproject.toml  repomix.config.json  rproject.toml
.agents/skills/academic-research-resources/: SKILL.md
.agents/skills/causal-inference-resources/: SKILL.md
.agents/skills/ecc-resources/: SKILL.md
.agents/skills/econ-ai-resources/: SKILL.md
.agents/skills/econ-research-feedback/: SKILL.md
.agents/skills/econ-writing/: SKILL.md
.claude/mcp-configs/: mcp-servers.json
.codex/: config.toml
.cursor/rules/: 01_project_policy.mdc
.devcontainer/: Dockerfile  devcontainer.json  register-kernels.sh  setup-environment.sh
.gemini/: GEMINI.md
.github/: copilot-instructions.md
docs/ai/: ai_research_assistant_guidelines.md  cloud_llm_guidelines.md  compiled_ai_skills.md  econ_writing_reference.md
docs/issue/: README.md  issue_template.md  task_template.md
scripts/: __init__.py  pack_context.sh  setup_ai_skills.sh  setup_extensions.sh  setup_ide_mcp.sh  sync_rules.py  sync_rules.sh
tex/paper/: econsocart.cfg  econsocart.cls  ecta-fullname.bst  ecta_template.tex
tex/slides/: main.tex
